--- a/style.scss
+++ b/style.scss
@@ -17,8 +17,10 @@ html {
   font-size: 100%;
 }
 
+
+
 body {
-	background: $white;
+	background: #6699ff;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
