--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,13 @@ html {
   font-size: 100%;
 }
 
+table {
+    border-collapse: collapse;
+}
 
+table, th, td {
+    border: 1px solid black;
+}
 
 body {
 	background: #6699ff;
