--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,11 @@ html {
   font-size: 100%;
 }
 
+th, td {
+    padding: 15px;
+    text-align: left;
+}
+
 p {
     padding-top: 80px;
     padding-right: 80px;
