--- a/style.scss
+++ b/style.scss
@@ -22,13 +22,6 @@ th, td {
     text-align: left;
 }
 
-p {
-    padding-top: 80px;
-    padding-right: 80px;
-    padding-bottom: 80px;
-    padding-left: 80px;
-}
-
 table {
     border-collapse: collapse;
 }
@@ -51,7 +44,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+  font-family: "Times New Roman", Times, serif;
   color: $darkerGray;
   font-weight: bold;
 
