--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,11 @@ html {
   font-size: 100%;
 }
 
+p {
+    border-bottom: 6px solid #c299ff;
+    background-color: #b3b3ff;
+}
+
 th, td {
     padding: 15px;
     text-align: left;
