--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 p {
-    border-bottom: 6px solid #c299ff;
-    background-color: #b3b3ff;
+    border-bottom: 6px solid #9999ff;
+    background-color: #cc99ff;
 }
 
 th, td {
