--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 p {
-    border-bottom: 6px solid #b366ff;
-    background-color: #6666ff;
+    border-bottom: 6px solid #8080ff;
+    background-color: #99bbff;
 }
 
 th, td {
