--- a/style.scss
+++ b/style.scss
@@ -17,8 +17,26 @@ html {
   font-size: 100%;
 }
 
+p {
+    border-bottom: 6px solid #8080ff;
+    background-color: #99bbff;
+}
+
+th, td {
+    padding: 15px;
+    text-align: left;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
 body {
-	background: $white;
+	background: #80aaff;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
@@ -31,7 +49,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
+  font-family: "Times New Roman", Times, serif;
   color: $darkerGray;
   font-weight: bold;
 
@@ -279,7 +297,7 @@ nav {
 }
 
 footer {
-  padding: 19px 0;
+  padding: 20px 0;
   text-align: center;
 }
 
